[package]
name = "pegasus"
description = "Pegasus: A Simple Command Runner for Multiple Nodes"
authors = ["Jae-Won Chung <jwnchung@umich.edu>"]
version = "0.1.0"
edition = "2021"
repository = "https://github.com/jaywonchung/pegasus"
license = "MIT"

[dependencies]
openssh = "0.8.1"
tokio = { version = "1", features = ["rt", "macros", "io-util", "time", "sync", "rt-multi-thread", "parking_lot"] }
futures = "0.3"
flume = { version = "0.10.10", features = ["async"] }
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.8"
void = "1"
itertools = "0.10.3"
clap = { version = "3.0.13", features = ["derive"] }
handlebars = "3"
colored = "2"
colourado = "0.2.0"
memchr = "2.4.1"
