[package]
name = "pegasus-ssh"
description = "Pegasus: A Multi-Node SSH Command Runner"
authors = ["Jae-Won Chung <jaewon.chung.cs@gmail.com>"]
version = "1.1.2"
edition = "2021"
repository = "https://github.com/jaywonchung/pegasus"
license = "MIT"
keywords = ["cli", "ssh"]
categories = ["command-line-utilities"]

[[bin]]
name = "pegasus"
path = "src/main.rs"

[dependencies]
openssh = { version = "0.9.9", features = ["native-mux"], default-features = false }
tokio = { version = "1", features = ["rt", "macros", "io-util", "time", "sync", "rt-multi-thread", "parking_lot", "signal"] }
futures = "0.3"
flume = { version = "0.10.10", features = ["async"] }
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.8"
void = "1"
itertools = "0.10.3"
clap = { version = "3.0.13", features = ["derive"] }
handlebars = "4"
handlebars_misc_helpers = { version = "0.13.0", features = ["string", "json"] }
colored = "2"
colourado = "0.2.0"
memchr = "2.4.1"

[profile.release]
panic = "abort"
